--- a/Project/ui/greeting_menu.ui
+++ b/Project/ui/greeting_menu.ui
@@ -11,17 +11,20 @@
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>5</number>
+   </property>
    <property name="leftMargin">
     <number>10</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>20</number>
    </property>
    <property name="rightMargin">
     <number>10</number>
    </property>
    <property name="bottomMargin">
-    <number>10</number>
+    <number>30</number>
    </property>
    <item>
     <widget class="QFrame" name="customTitleBar">
@@ -106,7 +109,7 @@
    <item>
     <widget class="QLabel" name="selectSubLbl">
      <property name="text">
-      <string>Select a Greeting:</string>
+      <string>Select Receipt Greeting:</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
