--- a/Project/ui/logout_menu.ui
+++ b/Project/ui/logout_menu.ui
@@ -7,21 +7,24 @@
     <x>0</x>
     <y>0</y>
     <width>380</width>
-    <height>201</height>
+    <height>231</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>5</number>
+   </property>
    <property name="leftMargin">
     <number>10</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>20</number>
    </property>
    <property name="rightMargin">
     <number>10</number>
    </property>
    <property name="bottomMargin">
-    <number>10</number>
+    <number>30</number>
    </property>
    <item>
     <widget class="QFrame" name="customTitleBar">
