--- a/Project/ui/product_menu.ui
+++ b/Project/ui/product_menu.ui
@@ -7,10 +7,25 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>587</height>
+    <height>613</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>5</number>
+   </property>
+   <property name="leftMargin">
+    <number>10</number>
+   </property>
+   <property name="topMargin">
+    <number>20</number>
+   </property>
+   <property name="rightMargin">
+    <number>10</number>
+   </property>
+   <property name="bottomMargin">
+    <number>30</number>
+   </property>
    <item>
     <widget class="QFrame" name="customTitleBar">
      <property name="frameShape">
@@ -78,7 +93,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tabAdd">
       <attribute name="title">
@@ -272,6 +287,9 @@
           <widget class="QLabel" name="searchSubLbl">
            <property name="text">
             <string>Search by :</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
            </property>
           </widget>
          </item>
@@ -507,7 +525,7 @@
        <item>
         <layout class="QFormLayout" name="update_formLayout">
          <item row="0" column="0">
-          <widget class="QLabel" name="searchSubLbl2">
+          <widget class="QLabel" name="search2SubLbl">
            <property name="text">
             <string>Search by :</string>
            </property>
